--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="shortcut icon" href="/img/do-utilizador.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8S7C1HMNSB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-8S7C1HMNSB');
+    </script>
+
+
 </head>
 <body>
     <header>
