atualização da pagina serviços

--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio de Airton - Desenvolvedor Web e Backend com experiência em JavaScript, React Native, Node.js, HTML e CSS.">
     <title>Portfólio de Airton</title>
-    <link rel="shortcut icon" href="/img/do-utilizador.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="styles.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8S7C1HMNSB"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-8S7C1HMNSB');
-    </script>
+    <!--Links-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="shortcut icon" href="/img/do-utilizador.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -80,25 +76,58 @@
         </section>
 
         <section id="services" style="display:none;">
-        <h2>O que eu faço</h2>
-        <div class="services-container">
-            <div class="service">
-            <i class="devicon-react-original colored"></i>
-            <h3>Front-end</h3>
-            <p>Desenvolvimento de interfaces modernas e responsivas usando React e JavaScript.</p>
+            <h2>O que eu faço?</h2>
+
+            <p style="text-align:center; margin-bottom: 2rem;">
+                Meu objetivo é criar soluções completas e funcionais, unindo design moderno, desempenho e escalabilidade para cada projeto.
+            </p>
+
+            <div class="services-container">
+                <div class="service">
+                    <i class="devicon-react-original colored"></i>
+                    <h3>Front-end</h3>
+                    <p>Desenvolvimento de interfaces modernas e responsivas usando React, TypeScript e JavaScript.</p>
+                </div>
+
+                <div class="service">
+                    <i class="devicon-nodejs-plain colored"></i>
+                    <h3>Back-end</h3>
+                    <p>APIs rápidas e seguras com Node.js e integração com bancos de dados, incluindo Firebase.</p>
+                </div>
+
+                <div class="service">
+                    <i class="devicon-firebase-plain colored"></i>
+                    <h3>Firebase & Banco de Dados</h3>
+                    <p>Integração com Firebase para autenticação, banco de dados e deploy de aplicações web.</p>
+                </div>
+
+                <div class="service">
+                    <i class="devicon-html5-plain colored"></i>
+                    <h3>Websites e Landing Pages</h3>
+                    <p>Criação de sites, landing pages e portfólios totalmente responsivos e funcionais.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fas fa-tools" style="font-size:3rem; color:#bb86fc;"></i>
+                    <h3>Manutenção de Computadores</h3>
+                    <p>Serviços de manutenção, formatação e otimização de computadores para melhorar desempenho e segurança.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fas fa-image" style="font-size:3rem; color:#bb86fc;"></i>
+                    <h3>Edição de Fotos e Vídeos</h3>
+                    <p>Criação e edição de conteúdos visuais usando Adobe Photoshop e Adobe After Effects para projetos profissionais.</p>
+                </div>
             </div>
-            <div class="service">
-            <i class="devicon-nodejs-plain colored"></i>
-            <h3>Back-end</h3>
-            <p>APIs rápidas e seguras com Node.js e integração com bancos de dados.</p>
+
+            <div style="margin-top: 3rem; text-align:center; line-height: 1.5;">
+                <p>Trabalho com dedicação e foco em resultados para que cada projeto seja único e funcional.</p>
+                <p>Meu objetivo é fornecer soluções confiáveis, escaláveis e fáceis de usar, garantindo sempre a melhor experiência para o usuário.</p>
+                <p>Seja um site profissional, uma landing page ou manutenção de sistemas e computadores, estou pronto para ajudar.</p>
             </div>
-            <div class="service">
-            <i class="devicon-docker-plain colored"></i>
-            <h3>DevOps Básico</h3>
-            <p>Deploy em servidores e uso de Docker para ambientes de desenvolvimento.</p>
-            </div>
-        </div>
-    </section>
+        </section>
+
+
 
     <section id="projects" style="display:none;">
         <h2>Projetos</h2>
