melhorado a parte de projetos

--- a/index.html
+++ b/index.html
@@ -129,18 +129,53 @@
 
 
 
-    <section id="projects" style="display:none;">
-        <h2>Projetos</h2>
-        <div class="project-container">
-            <div class="project">
-                <img src="/img/Projetos.gif" alt="Descrição do Projeto">
-                <div class="project-info">
-                    <h3>Projetos</h3>
-                    <button class="button" onclick="window.location.href='https://github.com/Airton-Santos?tab=repositories'">Ver Projetos</button>
+        <section id="projects" style="display:none;">
+            <h2>Projetos</h2>
+            <p style="text-align:center; margin-bottom:2rem;">
+                Alguns dos projetos que já desenvolvi, incluindo sites, landing pages e aplicações web.
+            </p>
+            <div class="project-container">
+                <!-- Projeto real -->
+                <div class="project">
+                    <img src="/img/Projetos.gif" alt="Descrição do Projeto">
+                    <div class="project-info">
+                        <h3>Portfólio</h3>
+                        <p>Um site pessoal mostrando meus trabalhos e habilidades.</p>
+                        <button class="button" onclick="window.location.href='https://github.com/Airton-Santos?tab=repositories'">Ver Projetos</button>
+                    </div>
+                </div>
+
+                <!-- Projeto placeholder 1 -->
+                <div class="project">
+                    <img src="/img/pingpongGame.png" alt="Projeto em desenvolvimento">
+                    <div class="project-info">
+                        <h3>Ping Pong Game</h3>
+                        <p>Jogo de Ping pong criado no navegador com html, css e JavaScript.</p>
+                        <button class="button" onclick="window.location.href='https://github.com/Airton-Santos/PingPongGame'">Ver Projeto</button>
+                    </div>
+                </div>
+
+                <!-- Projeto placeholder 2 -->
+                <div class="project">
+                    <img src="/img/iconFocusFlow.png" alt="Projeto em desenvolvimento">
+                    <div class="project-info">
+                        <h3>Focus Flow</h3>
+                        <p>Aplicação com Node.js e integração com Firebase(um aplicativo de gereciamento de tarefas).</p>
+                        <button class="button" onclick="window.location.href='https://github.com/Airton-Santos/FocusFLow3.0'">Ver Projeto</button>
+                    </div>
+                </div>
+
+                <!-- Projeto placeholder 3 -->
+                <div class="project">
+                    <img src="/img/javaicone.png" alt="Projeto em desenvolvimento">
+                    <div class="project-info">
+                        <h3>Projetos Em java</h3>
+                        <p>Projetos pequenos e simples feito em java.</p>
+                        <button class="button" onclick="window.location.href='https://github.com/Airton-Santos/Projetos--JAVA-'">Ver Projeto</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     <section id="contact" style="display:none;">
         <h2>Contato</h2>
