atualização da pagina contato

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Links-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <script src="https://kit.fontawesome.com/seu-kit.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="shortcut icon" href="/img/do-utilizador.png" type="image/x-icon">
 </head>
@@ -177,23 +178,51 @@
             </div>
         </section>
 
-    <section id="contact" style="display:none;">
-        <h2>Contato</h2>
-        <div class="contact-container">
-            <div class="contact-item">
-                <button class="button" onclick="window.location.href='https://github.com/Airton-Santos'">GitHub</button>
+        <section id="contact" style="display:none;">
+            <h2>Contato</h2>
+
+            <p style="text-align:center; margin-bottom:2rem;">
+                Estou sempre aberto a novos projetos, parcerias ou apenas bater um papo sobre tecnologia e design. Sinta-se à vontade para me contatar!
+            </p>
+
+            <div class="contact-container" style="display:flex; flex-wrap:wrap; justify-content:center; gap:1rem;">
+
+                <div class="contact-card">
+                    <i class="fab fa-github"></i>
+                    <h3>GitHub</h3>
+                    <p>Confira meus projetos e contribuições.</p>
+                    <button class="button" onclick="window.open('https://github.com/Airton-Santos', '_blank')">Acessar</button>
+                </div>
+
+                <div class="contact-card">
+                    <i class="fas fa-envelope"></i>
+                    <h3>E-mail</h3>
+                    <p>Envie uma mensagem para discutirmos ideias.</p>
+                    <button class="button" onclick="window.location.href='mailto:santosairton31508@gmail.com'">Enviar E-mail</button>
+                </div>
+
+                <div class="contact-card">
+                    <i class="fab fa-whatsapp"></i>
+                    <h3>WhatsApp</h3>
+                    <p>Chame no WhatsApp para contato rápido.</p>
+                    <button class="button" onclick="window.open('https://wa.me/5582987100763', '_blank')">Abrir WhatsApp</button>
+                </div>
+
+                <div class="contact-card">
+                    <i class="fas fa-phone"></i>
+                    <h3>Telefone</h3>
+                    <p>Entre em contato direto por ligação.</p>
+                    <button class="button" onclick="window.location.href='tel:+5582987100763'">Ligar</button>
+                </div>
+
             </div>
-            <div class="contact-item">
-                <button class="button" onclick="window.location.href='mailto:santosairton31508@gmail.com'">E-mail</button>
-            </div>
-            <div class="contact-item">
-                <button class="button" onclick="window.location.href='tel:+5582987100763'">Telefone</button>
-            </div>
-            <div class="contact-item">
-                <button class="button" onclick="window.location.href='https://wa.me/5582987100763'">WhatsApp</button>
-            </div>
-        </div>
-    </section>
+
+            <p style="text-align:center; margin-top:2rem;">
+                📍 Maceió, Alagoas, Brasil
+            </p>
+        </section>
+
+
 
     </main>
 
