--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p class="hexon-quote">Learning, evolving, and finding new ways to bring ideas to life.</p>
 
                         <div class="hexon-buttons">
-                            <a href="/downloads/Currículo Airton José dos Santos Para TI.pdf"><button class="glow-cv-button">Download CV</button></a>
+                            <a href="/donwloads/Currículo Airton José dos Santos Para TI.pdf"><button class="glow-cv-button">Download CV</button></a>
                         </div>
 
                         <!-- SOCIAL -->
